Feature/search codes support (#1680)
* Improve restrictions handling

- Support literals in onProperty + hasValue restrictions
- Simplify retrictions loading (skip Disambiguate detour, use JsonLd class instead)

* Refactor (WIP)

- Keep track of original nodes and their expanded counterparts
- Reorder transformation stages in query tree conversion to Elastic query
- Introduce QueryTree subclasses to more clearly represent each transformation stage

* Implement initial PostFilter.extract() with restored multi-select support and passing unit tests

* Ensure nested clauses remain intact instead of being split between the main query and post filter

* Refactor ES query handling

- Extract ES nested and post-filter logic into a dedicated EsQueryTree class
- Handle case where conditions sharing the same nested stem end up in different groups after query expansion
- Rename QueryTree.remove(Collection<Node>) to removeAll(Collection<Node>)
- Remove unneeded helper methods from Group class

* Avoid repeated meta property when expanding selector

* Preserve concrete subtype when copying a QueryTree

* Use dynamic template for indexing date fields

* Support more integral properties (hasComponent)